<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="min_hint">MIN</string>
    <string name="max_hint">MAX</string>
    <string name="socket_filter_red_socket">R</string>
    <string name="socket_filter_green_socket">G</string>
    <string name="socket_filter_blue_socket">B</string>
    <string name="socket_filter_white_socket">W</string>
    <string name="account_name_hint">Enter account name…</string>
    <string name="toolbar_search_item_hint">Search item</string>
    <string name="clear_filter_description">clearFilter</string>
    <string name="items_search_title">Selected item: %s</string>
    <string name="enter_item_name_hint">Enter item name…</string>
    <string name="notify_me_when">Notify me when</string>
    <string name="will_cost_less_than">Will cost less than</string>
    <string name="enter_amount_hint">Enter amount…</string>
    <string name="chaos_orbs_placeholder">Chaos orb(s)</string>
    <string name="add_notification_request">Add notification</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="buyout_price">Buyout Price</string>
    <string name="trade_filters">Trade Filters</string>
    <string name="heist_filters">Heist Filters</string>
</resources>