<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/want_currency_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontinsmallcaps"
        android:text="@string/notify_me_when"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/items_list_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/items_list_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/default_bordered_background"
        android:gravity="center"
        android:hint="@string/empty_hint"
        android:paddingHorizontal="8dp"
        app:boxBackgroundMode="none"
        app:boxStrokeWidth="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primaryTextColor"
        app:hintEnabled="false"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/have_currency_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/want_currency_header">

        <AutoCompleteTextView
            android:id="@+id/items_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            android:completionThreshold="0"
            android:dropDownWidth="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/enter_item_name_hint"
            android:inputType="textNoSuggestions"
            android:paddingVertical="0dp"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/secondaryLightColor"
            android:textCursorDrawable="@color/primaryTextColor"
            android:textStyle="bold"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/have_currency_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/fontinsmallcaps"
        android:text="@string/will_cost_less_than"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/amount_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/items_list_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/default_bordered_background"
        android:hint="@string/empty_hint"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/add_request"
        app:layout_constraintEnd_toStartOf="@id/chaos_orbs_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/have_currency_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:hint="@string/enter_amount_hint"
            android:inputType="textNoSuggestions|number"
            android:padding="0dp"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/secondaryLightColor"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chaos_orbs_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/fontinsmallcaps"
        android:text="@string/chaos_orbs_placeholder"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/amount_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/amount_container"
        app:layout_constraintTop_toTopOf="@id/amount_container" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/default_bordered_background"
        android:drawableStart="@drawable/add_24"
        android:drawablePadding="16dp"
        android:fontFamily="@font/fontinsmallcaps"
        android:paddingVertical="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="32dp"
        android:text="@string/add_notification_request"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>