<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filterName"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/filter_textfield_default"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/primaryTextColor"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/redValue"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/filter_textfield_redsocket"
        android:hint="@string/empty_hint"
        android:paddingEnd="1dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/greenValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterName"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterRed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:hint="@string/socket_filter_red_socket"
            android:inputType="textNoSuggestions|number"
            android:padding="0dp"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/secondaryLightColor"
            android:textCursorDrawable="@drawable/default_cursor"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/greenValue"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/filter_textfield_greensocket"
        android:hint="@string/empty_hint"
        android:paddingHorizontal="1dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/blueValue"
        app:layout_constraintStart_toEndOf="@id/redValue"
        app:layout_constraintTop_toBottomOf="@id/filterName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterGreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:hint="@string/socket_filter_green_socket"
            android:inputType="textNoSuggestions|number"
            android:padding="0dp"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/secondaryLightColor"
            android:textCursorDrawable="@drawable/default_cursor"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blueValue"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/filter_textfield_bluesocket"
        android:hint="@string/empty_hint"
        android:paddingHorizontal="1dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/whiteValue"
        app:layout_constraintStart_toEndOf="@id/greenValue"
        app:layout_constraintTop_toBottomOf="@id/filterName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterBlue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:hint="@string/socket_filter_blue_socket"
            android:inputType="textNoSuggestions|number"
            android:padding="0dp"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/secondaryLightColor"
            android:textCursorDrawable="@drawable/default_cursor"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/whiteValue"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/filter_textfield_whitesocket"
        android:hint="@string/empty_hint"
        android:paddingHorizontal="1dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/minValue"
        app:layout_constraintStart_toEndOf="@id/blueValue"
        app:layout_constraintTop_toBottomOf="@id/filterName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:hint="@string/socket_filter_white_socket"
            android:inputType="textNoSuggestions|number"
            android:padding="0dp"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/secondaryLightColor"
            android:textCursorDrawable="@drawable/default_cursor"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minValue"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:background="@color/primaryLightColor"
        android:hint="@string/empty_hint"
        android:paddingHorizontal="1dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/maxValue"
        app:layout_constraintStart_toEndOf="@id/whiteValue"
        app:layout_constraintTop_toBottomOf="@id/filterName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterMin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:hint="@string/min_hint"
            android:inputType="textNoSuggestions|number"
            android:padding="0dp"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/secondaryLightColor"
            android:textCursorDrawable="@drawable/default_cursor"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxValue"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="2dp"
        android:background="@color/primaryLightColor"
        android:hint="@string/empty_hint"
        android:paddingStart="1dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/minValue"
        app:layout_constraintTop_toBottomOf="@id/filterName"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filterMax"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            android:digits="0123456789"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center|center_vertical"
            android:hint="@string/max_hint"
            android:inputType="textNoSuggestions|number"
            android:padding="0dp"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/secondaryLightColor"
            android:textCursorDrawable="@drawable/default_cursor"
            android:textSize="13sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>